--- a/Features/Features.ipynb
+++ b/Features/Features.ipynb
@@ -34,7 +34,7 @@
         "import pandas as pd\r\n",
         "import numpy as np"
       ],
-      "execution_count": 74,
+      "execution_count": 128,
       "outputs": []
     },
     {
@@ -63,7 +63,7 @@
         "#     * 'Price' (Muchos nulos; 15982) ----------------> si ahora lo borramos, borrar celda del replace de Price\r\n",
         "#     * 'Currency' (Muchos nulos: 16052)\r\n"
       ],
-      "execution_count": null,
+      "execution_count": 129,
       "outputs": []
     },
     {
@@ -155,7 +155,7 @@
         "                          'Total_Amount_Currency' : 'category',\n",
         "                          'Total_Taxable_Amount_Currency' : 'category'})"
       ],
-      "execution_count": 80,
+      "execution_count": 130,
       "outputs": []
     },
     {
@@ -165,14 +165,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "F989UwUQddaE",
-        "outputId": "799bdcb6-92e5-464c-b644-08d2f54fb829"
+        "outputId": "d1183888-d9de-4cce-e100-50730601d293"
       },
       "source": [
         "# Cantidad de columnas y filas de cada set de datos\r\n",
         "print('Cantidad de columnas de train:', len(train.columns), 'y cantidad de filas de train:', len(train))\r\n",
         "print('Cantidad de columnas de test:', len(test.columns), 'y cantidad de filas de test:', len(test))"
       ],
-      "execution_count": 81,
+      "execution_count": 131,
       "outputs": [
         {
           "output_type": "stream",
@@ -195,7 +195,7 @@
         "\r\n",
         "test.rename(columns={'Source ' : 'Source', 'ASP_(converted)' : 'ASP_(converted_USD)'}, inplace=True)"
       ],
-      "execution_count": 83,
+      "execution_count": 132,
       "outputs": []
     },
     {
@@ -209,7 +209,7 @@
         "\r\n",
         "test['Month'] = pd.to_datetime(test['Month'], format='%Y - %m').dt.month"
       ],
-      "execution_count": 84,
+      "execution_count": 133,
       "outputs": []
     },
     {
@@ -227,7 +227,7 @@
         "test['Price'] = test['Price'].replace('Other', np.NaN)\r\n",
         "test['Price'] = test['Price'].astype('float')"
       ],
-      "execution_count": 86,
+      "execution_count": 134,
       "outputs": []
     },
     {
@@ -252,7 +252,7 @@
         "test['Planned_Delivery_Start_Date'] = pd.to_datetime(test['Planned_Delivery_Start_Date'], format=formato_fecha) # ver fechas filas 0 y 1, comparar el mes con month\r\n",
         "test['Planned_Delivery_End_Date'] = pd.to_datetime(test['Planned_Delivery_End_Date'], format=formato_fecha) # ver fecha fila 0"
       ],
-      "execution_count": 89,
+      "execution_count": 135,
       "outputs": []
     },
     {
@@ -265,7 +265,7 @@
         "\r\n",
         "# test.info()"
       ],
-      "execution_count": 53,
+      "execution_count": 136,
       "outputs": []
     },
     {
@@ -285,7 +285,7 @@
       "source": [
         "# train.head(10)"
       ],
-      "execution_count": 48,
+      "execution_count": 137,
       "outputs": []
     },
     {
@@ -296,7 +296,7 @@
       "source": [
         "# test.head(10)"
       ],
-      "execution_count": 49,
+      "execution_count": 138,
       "outputs": []
     },
     {
@@ -315,13 +315,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nPFXZc362qlR",
-        "outputId": "0952b20a-db6e-4b7b-b1c1-757e262f9e55"
+        "outputId": "8e7e6743-04e6-43bb-ce4b-370969287b45"
       },
       "source": [
         "# Vemos los posibles valores que puede adoptar 'Stage'\r\n",
         "train['Stage'].value_counts()"
       ],
-      "execution_count": 22,
+      "execution_count": 139,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -338,7 +338,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 139
         }
       ]
     },
@@ -349,7 +349,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "n9oydklO66hy",
-        "outputId": "0957afe5-659d-4e1e-98d4-1e77ceb01fd6"
+        "outputId": "20f765ff-5bbd-490b-fa62-1e398307cfed"
       },
       "source": [
         "# Tenemos que de 16947 filas en total, solo 64 (0.3776%) NO son Closed Won o Closed Lost, es por\r\n",
@@ -357,80 +357,24 @@
         "train.drop(train[(train['Stage'] != 'Closed Won') & (train['Stage'] != 'Closed Lost')].index, inplace=True)\r\n",
         "train['Stage'].value_counts()"
       ],
-      "execution_count": 33,
+      "execution_count": 140,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Closed Won     9533\n",
-              "Closed Lost    7350\n",
+              "Closed Won       9533\n",
+              "Closed Lost      7350\n",
+              "Qualification       0\n",
+              "Proposal            0\n",
+              "Negotiation         0\n",
               "Name: Stage, dtype: int64"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 33
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "_6aDQ4OLiy95"
-      },
-      "source": [
-        "## Stage a binary"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "BrxMi0oCiy96"
-      },
-      "source": [
-        "#Hay que ver que hacemos con los negotiation, proposal, qualification\n",
-        "\n",
-        "train['Target'] = train['Stage'].replace({'Closed Won': 1, 'Closed Lost': 0,\n",
-        "                                          'Negotiation': 0, 'Proposal': 0, 'Qualification': 0})"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "L4POH7VViy96",
-        "outputId": "76c8c267-bb8e-436f-faf4-28625b3afb50"
-      },
-      "source": [
-        "train['Target'].astype(int)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0        0\n",
-              "1        1\n",
-              "2        1\n",
-              "3        0\n",
-              "4        0\n",
-              "        ..\n",
-              "16942    1\n",
-              "16943    1\n",
-              "16944    1\n",
-              "16945    0\n",
-              "16946    0\n",
-              "Name: Target, Length: 16947, dtype: int32"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 124
+          "execution_count": 140
         }
       ]
     },
@@ -455,7 +399,7 @@
         "change_JPY = 0.0094800 # 1 yen japones = 0,0094800 dolares EEUU\n",
         "change_GBP = 1.2935 # 1 libra esterlina = 1,2935 dolares EEUU"
       ],
-      "execution_count": null,
+      "execution_count": 141,
       "outputs": []
     },
     {
@@ -470,7 +414,7 @@
         "filtro_JPY_train = train['Total_Amount_Currency'] == 'JPY'\n",
         "filtro_GBP_train = train['Total_Amount_Currency'] == 'GBP'"
       ],
-      "execution_count": null,
+      "execution_count": 142,
       "outputs": []
     },
     {
@@ -485,7 +429,7 @@
         "train.loc[filtro_JPY_train, 'USD_Total_Amount'] = train.loc[filtro_JPY_train, 'Total_Amount']*change_JPY\n",
         "train.loc[filtro_GBP_train, 'USD_Total_Amount'] = train.loc[filtro_GBP_train, 'Total_Amount']*change_GBP"
       ],
-      "execution_count": null,
+      "execution_count": 143,
       "outputs": []
     },
     {
@@ -496,7 +440,7 @@
       "source": [
         "train['USD_Total_Amount'] = train['USD_Total_Amount'].round(2)"
       ],
-      "execution_count": null,
+      "execution_count": 144,
       "outputs": []
     },
     {
@@ -511,7 +455,7 @@
         "filtro_JPY_test = test['Total_Amount_Currency'] == 'JPY'\n",
         "filtro_GBP_test = test['Total_Amount_Currency'] == 'GBP'"
       ],
-      "execution_count": null,
+      "execution_count": 145,
       "outputs": []
     },
     {
@@ -526,7 +470,7 @@
         "test.loc[filtro_JPY_test, 'USD_Total_Amount'] = test.loc[filtro_JPY_test, 'Total_Amount']*change_JPY\n",
         "test.loc[filtro_GBP_test, 'USD_Total_Amount'] = test.loc[filtro_GBP_test, 'Total_Amount']*change_GBP"
       ],
-      "execution_count": null,
+      "execution_count": 146,
       "outputs": []
     },
     {
@@ -537,7 +481,77 @@
       "source": [
         "test['USD_Total_Amount'] = test['USD_Total_Amount'].round(2)"
       ],
-      "execution_count": null,
+      "execution_count": 147,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_6aDQ4OLiy95"
+      },
+      "source": [
+        "## Codificamos Stage con Binary Encoding"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BrxMi0oCiy96"
+      },
+      "source": [
+        "train['Target'] = train['Stage'].replace({'Closed Won': 1, 'Closed Lost': 0})"
+      ],
+      "execution_count": 148,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "L4POH7VViy96",
+        "outputId": "35b06c0c-f0f9-4be6-92ae-b2ec8ad39725",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "train['Target'].astype(int)"
+      ],
+      "execution_count": 149,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0        0\n",
+              "1        1\n",
+              "2        1\n",
+              "3        0\n",
+              "4        0\n",
+              "        ..\n",
+              "16942    1\n",
+              "16943    1\n",
+              "16944    1\n",
+              "16945    0\n",
+              "16946    0\n",
+              "Name: Target, Length: 16883, dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 149
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_g8Oz45Miy9-"
+      },
+      "source": [
+        "train.drop(columns=['Stage'], inplace=True)"
+      ],
+      "execution_count": 153,
       "outputs": []
     },
     {
@@ -560,30 +574,50 @@
         "\n",
         "test['Region'] = test['Region'].map(mean_encoded_region)"
       ],
-      "execution_count": null,
+      "execution_count": 150,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_g8Oz45Miy9-"
+        "id": "RiUZ9Ki5_fcv",
+        "outputId": "c36bd11c-4f53-4782-991b-ce71d4eb79a2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "# OJO QUE REGION QUEDÓ DE TIPO CATEGORY\r\n",
+        "\r\n",
+        "train['Region']"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "PBnxAC2Riy9-"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 159,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0        0.530258\n",
+              "1        0.530258\n",
+              "2        0.455886\n",
+              "3        0.455886\n",
+              "4        0.455886\n",
+              "           ...   \n",
+              "16942    0.530258\n",
+              "16943    0.530258\n",
+              "16944    0.530258\n",
+              "16945    0.455886\n",
+              "16946    0.455886\n",
+              "Name: Region, Length: 16883, dtype: category\n",
+              "Categories (5, float64): [0.583205, 0.455886, 0.530258, 0.682481, 0.294118]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 159
+        }
+      ]
     }
   ]
 }
