--- a/Features/Features.ipynb
+++ b/Features/Features.ipynb
@@ -34,7 +34,7 @@
         "import pandas as pd\r\n",
         "import numpy as np"
       ],
-      "execution_count": 128,
+      "execution_count": 161,
       "outputs": []
     },
     {
@@ -63,7 +63,7 @@
         "#     * 'Price' (Muchos nulos; 15982) ----------------> si ahora lo borramos, borrar celda del replace de Price\r\n",
         "#     * 'Currency' (Muchos nulos: 16052)\r\n"
       ],
-      "execution_count": 129,
+      "execution_count": 162,
       "outputs": []
     },
     {
@@ -155,7 +155,7 @@
         "                          'Total_Amount_Currency' : 'category',\n",
         "                          'Total_Taxable_Amount_Currency' : 'category'})"
       ],
-      "execution_count": 130,
+      "execution_count": 163,
       "outputs": []
     },
     {
@@ -165,14 +165,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "F989UwUQddaE",
-        "outputId": "d1183888-d9de-4cce-e100-50730601d293"
+        "outputId": "6663f430-60a2-441b-adca-cf6ee0b51b76"
       },
       "source": [
         "# Cantidad de columnas y filas de cada set de datos\r\n",
         "print('Cantidad de columnas de train:', len(train.columns), 'y cantidad de filas de train:', len(train))\r\n",
         "print('Cantidad de columnas de test:', len(test.columns), 'y cantidad de filas de test:', len(test))"
       ],
-      "execution_count": 131,
+      "execution_count": 164,
       "outputs": [
         {
           "output_type": "stream",
@@ -195,7 +195,7 @@
         "\r\n",
         "test.rename(columns={'Source ' : 'Source', 'ASP_(converted)' : 'ASP_(converted_USD)'}, inplace=True)"
       ],
-      "execution_count": 132,
+      "execution_count": 165,
       "outputs": []
     },
     {
@@ -209,7 +209,7 @@
         "\r\n",
         "test['Month'] = pd.to_datetime(test['Month'], format='%Y - %m').dt.month"
       ],
-      "execution_count": 133,
+      "execution_count": 166,
       "outputs": []
     },
     {
@@ -227,7 +227,7 @@
         "test['Price'] = test['Price'].replace('Other', np.NaN)\r\n",
         "test['Price'] = test['Price'].astype('float')"
       ],
-      "execution_count": 134,
+      "execution_count": 167,
       "outputs": []
     },
     {
@@ -252,7 +252,7 @@
         "test['Planned_Delivery_Start_Date'] = pd.to_datetime(test['Planned_Delivery_Start_Date'], format=formato_fecha) # ver fechas filas 0 y 1, comparar el mes con month\r\n",
         "test['Planned_Delivery_End_Date'] = pd.to_datetime(test['Planned_Delivery_End_Date'], format=formato_fecha) # ver fecha fila 0"
       ],
-      "execution_count": 135,
+      "execution_count": 168,
       "outputs": []
     },
     {
@@ -265,7 +265,7 @@
         "\r\n",
         "# test.info()"
       ],
-      "execution_count": 136,
+      "execution_count": 169,
       "outputs": []
     },
     {
@@ -285,7 +285,7 @@
       "source": [
         "# train.head(10)"
       ],
-      "execution_count": 137,
+      "execution_count": 170,
       "outputs": []
     },
     {
@@ -296,7 +296,7 @@
       "source": [
         "# test.head(10)"
       ],
-      "execution_count": 138,
+      "execution_count": 171,
       "outputs": []
     },
     {
@@ -315,13 +315,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nPFXZc362qlR",
-        "outputId": "8e7e6743-04e6-43bb-ce4b-370969287b45"
+        "outputId": "dbc3d3ca-8f64-4ca3-fd59-2b00ded88f3e"
       },
       "source": [
         "# Vemos los posibles valores que puede adoptar 'Stage'\r\n",
         "train['Stage'].value_counts()"
       ],
-      "execution_count": 139,
+      "execution_count": 172,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -338,7 +338,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 139
+          "execution_count": 172
         }
       ]
     },
@@ -349,7 +349,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "n9oydklO66hy",
-        "outputId": "20f765ff-5bbd-490b-fa62-1e398307cfed"
+        "outputId": "3656134b-f027-4891-aa3e-c53bb7612f40"
       },
       "source": [
         "# Tenemos que de 16947 filas en total, solo 64 (0.3776%) NO son Closed Won o Closed Lost, es por\r\n",
@@ -357,7 +357,7 @@
         "train.drop(train[(train['Stage'] != 'Closed Won') & (train['Stage'] != 'Closed Lost')].index, inplace=True)\r\n",
         "train['Stage'].value_counts()"
       ],
-      "execution_count": 140,
+      "execution_count": 173,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -374,7 +374,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 140
+          "execution_count": 173
         }
       ]
     },
@@ -399,7 +399,7 @@
         "change_JPY = 0.0094800 # 1 yen japones = 0,0094800 dolares EEUU\n",
         "change_GBP = 1.2935 # 1 libra esterlina = 1,2935 dolares EEUU"
       ],
-      "execution_count": 141,
+      "execution_count": 174,
       "outputs": []
     },
     {
@@ -414,7 +414,7 @@
         "filtro_JPY_train = train['Total_Amount_Currency'] == 'JPY'\n",
         "filtro_GBP_train = train['Total_Amount_Currency'] == 'GBP'"
       ],
-      "execution_count": 142,
+      "execution_count": 175,
       "outputs": []
     },
     {
@@ -429,7 +429,7 @@
         "train.loc[filtro_JPY_train, 'USD_Total_Amount'] = train.loc[filtro_JPY_train, 'Total_Amount']*change_JPY\n",
         "train.loc[filtro_GBP_train, 'USD_Total_Amount'] = train.loc[filtro_GBP_train, 'Total_Amount']*change_GBP"
       ],
-      "execution_count": 143,
+      "execution_count": 176,
       "outputs": []
     },
     {
@@ -440,7 +440,7 @@
       "source": [
         "train['USD_Total_Amount'] = train['USD_Total_Amount'].round(2)"
       ],
-      "execution_count": 144,
+      "execution_count": 177,
       "outputs": []
     },
     {
@@ -455,7 +455,7 @@
         "filtro_JPY_test = test['Total_Amount_Currency'] == 'JPY'\n",
         "filtro_GBP_test = test['Total_Amount_Currency'] == 'GBP'"
       ],
-      "execution_count": 145,
+      "execution_count": 178,
       "outputs": []
     },
     {
@@ -470,7 +470,7 @@
         "test.loc[filtro_JPY_test, 'USD_Total_Amount'] = test.loc[filtro_JPY_test, 'Total_Amount']*change_JPY\n",
         "test.loc[filtro_GBP_test, 'USD_Total_Amount'] = test.loc[filtro_GBP_test, 'Total_Amount']*change_GBP"
       ],
-      "execution_count": 146,
+      "execution_count": 179,
       "outputs": []
     },
     {
@@ -481,7 +481,7 @@
       "source": [
         "test['USD_Total_Amount'] = test['USD_Total_Amount'].round(2)"
       ],
-      "execution_count": 147,
+      "execution_count": 180,
       "outputs": []
     },
     {
@@ -501,22 +501,22 @@
       "source": [
         "train['Target'] = train['Stage'].replace({'Closed Won': 1, 'Closed Lost': 0})"
       ],
-      "execution_count": 148,
+      "execution_count": 181,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "L4POH7VViy96",
-        "outputId": "35b06c0c-f0f9-4be6-92ae-b2ec8ad39725",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c293d63d-56e7-4244-ad14-c82eba45e4ec"
       },
       "source": [
         "train['Target'].astype(int)"
       ],
-      "execution_count": 149,
+      "execution_count": 182,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -539,7 +539,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 149
+          "execution_count": 182
         }
       ]
     },
@@ -551,7 +551,7 @@
       "source": [
         "train.drop(columns=['Stage'], inplace=True)"
       ],
-      "execution_count": 153,
+      "execution_count": 183,
       "outputs": []
     },
     {
@@ -574,24 +574,24 @@
         "\n",
         "test['Region'] = test['Region'].map(mean_encoded_region)"
       ],
-      "execution_count": 150,
+      "execution_count": 184,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "RiUZ9Ki5_fcv",
-        "outputId": "c36bd11c-4f53-4782-991b-ce71d4eb79a2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "15c983e9-8ee9-4f21-b2ee-dced6a2d3701"
       },
       "source": [
         "# OJO QUE REGION QUEDÓ DE TIPO CATEGORY\r\n",
         "\r\n",
         "train['Region']"
       ],
-      "execution_count": 159,
+      "execution_count": 185,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -615,9 +615,29 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 159
+          "execution_count": 185
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ElwB7jjJHNJm"
+      },
+      "source": [
+        "Finalmente guardamos el dataframe train en un csv"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "U2kCSjr1HMpO"
+      },
+      "source": [
+        "train.to_csv('data_train.csv')"
+      ],
+      "execution_count": 187,
+      "outputs": []
     }
   ]
 }
