--- a/Features/Features.ipynb
+++ b/Features/Features.ipynb
@@ -634,9 +634,9 @@
         "id": "U2kCSjr1HMpO"
       },
       "source": [
-        "train.to_csv('data_train.csv')"
+        "train.to_csv('data_train.csv', index=False)"
       ],
-      "execution_count": 187,
+      "execution_count": 188,
       "outputs": []
     }
   ]
