--- a/Features/Features.ipynb
+++ b/Features/Features.ipynb
@@ -34,7 +34,7 @@
         "import pandas as pd\r\n",
         "import numpy as np"
       ],
-      "execution_count": 161,
+      "execution_count": 222,
       "outputs": []
     },
     {
@@ -63,7 +63,7 @@
         "#     * 'Price' (Muchos nulos; 15982) ----------------> si ahora lo borramos, borrar celda del replace de Price\r\n",
         "#     * 'Currency' (Muchos nulos: 16052)\r\n"
       ],
-      "execution_count": 162,
+      "execution_count": 223,
       "outputs": []
     },
     {
@@ -155,7 +155,7 @@
         "                          'Total_Amount_Currency' : 'category',\n",
         "                          'Total_Taxable_Amount_Currency' : 'category'})"
       ],
-      "execution_count": 163,
+      "execution_count": 224,
       "outputs": []
     },
     {
@@ -165,14 +165,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "F989UwUQddaE",
-        "outputId": "6663f430-60a2-441b-adca-cf6ee0b51b76"
+        "outputId": "453ab29c-9713-454b-b0f5-2d45ac290f1e"
       },
       "source": [
         "# Cantidad de columnas y filas de cada set de datos\r\n",
         "print('Cantidad de columnas de train:', len(train.columns), 'y cantidad de filas de train:', len(train))\r\n",
         "print('Cantidad de columnas de test:', len(test.columns), 'y cantidad de filas de test:', len(test))"
       ],
-      "execution_count": 164,
+      "execution_count": 225,
       "outputs": [
         {
           "output_type": "stream",
@@ -195,7 +195,7 @@
         "\r\n",
         "test.rename(columns={'Source ' : 'Source', 'ASP_(converted)' : 'ASP_(converted_USD)'}, inplace=True)"
       ],
-      "execution_count": 165,
+      "execution_count": 226,
       "outputs": []
     },
     {
@@ -209,7 +209,7 @@
         "\r\n",
         "test['Month'] = pd.to_datetime(test['Month'], format='%Y - %m').dt.month"
       ],
-      "execution_count": 166,
+      "execution_count": 227,
       "outputs": []
     },
     {
@@ -227,7 +227,7 @@
         "test['Price'] = test['Price'].replace('Other', np.NaN)\r\n",
         "test['Price'] = test['Price'].astype('float')"
       ],
-      "execution_count": 167,
+      "execution_count": 228,
       "outputs": []
     },
     {
@@ -252,7 +252,7 @@
         "test['Planned_Delivery_Start_Date'] = pd.to_datetime(test['Planned_Delivery_Start_Date'], format=formato_fecha) # ver fechas filas 0 y 1, comparar el mes con month\r\n",
         "test['Planned_Delivery_End_Date'] = pd.to_datetime(test['Planned_Delivery_End_Date'], format=formato_fecha) # ver fecha fila 0"
       ],
-      "execution_count": 168,
+      "execution_count": 229,
       "outputs": []
     },
     {
@@ -265,7 +265,7 @@
         "\r\n",
         "# test.info()"
       ],
-      "execution_count": 169,
+      "execution_count": 230,
       "outputs": []
     },
     {
@@ -285,7 +285,7 @@
       "source": [
         "# train.head(10)"
       ],
-      "execution_count": 170,
+      "execution_count": 231,
       "outputs": []
     },
     {
@@ -296,7 +296,7 @@
       "source": [
         "# test.head(10)"
       ],
-      "execution_count": 171,
+      "execution_count": 232,
       "outputs": []
     },
     {
@@ -315,13 +315,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nPFXZc362qlR",
-        "outputId": "dbc3d3ca-8f64-4ca3-fd59-2b00ded88f3e"
+        "outputId": "32c623a1-cf06-4545-e692-76c8819cbfcc"
       },
       "source": [
         "# Vemos los posibles valores que puede adoptar 'Stage'\r\n",
         "train['Stage'].value_counts()"
       ],
-      "execution_count": 172,
+      "execution_count": 233,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -338,7 +338,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 172
+          "execution_count": 233
         }
       ]
     },
@@ -349,7 +349,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "n9oydklO66hy",
-        "outputId": "3656134b-f027-4891-aa3e-c53bb7612f40"
+        "outputId": "ec004875-a459-4bab-b2e7-fec42872d98f"
       },
       "source": [
         "# Tenemos que de 16947 filas en total, solo 64 (0.3776%) NO son Closed Won o Closed Lost, es por\r\n",
@@ -357,7 +357,7 @@
         "train.drop(train[(train['Stage'] != 'Closed Won') & (train['Stage'] != 'Closed Lost')].index, inplace=True)\r\n",
         "train['Stage'].value_counts()"
       ],
-      "execution_count": 173,
+      "execution_count": 234,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -374,7 +374,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 173
+          "execution_count": 234
         }
       ]
     },
@@ -399,7 +399,7 @@
         "change_JPY = 0.0094800 # 1 yen japones = 0,0094800 dolares EEUU\n",
         "change_GBP = 1.2935 # 1 libra esterlina = 1,2935 dolares EEUU"
       ],
-      "execution_count": 174,
+      "execution_count": 235,
       "outputs": []
     },
     {
@@ -414,7 +414,7 @@
         "filtro_JPY_train = train['Total_Amount_Currency'] == 'JPY'\n",
         "filtro_GBP_train = train['Total_Amount_Currency'] == 'GBP'"
       ],
-      "execution_count": 175,
+      "execution_count": 236,
       "outputs": []
     },
     {
@@ -429,7 +429,7 @@
         "train.loc[filtro_JPY_train, 'USD_Total_Amount'] = train.loc[filtro_JPY_train, 'Total_Amount']*change_JPY\n",
         "train.loc[filtro_GBP_train, 'USD_Total_Amount'] = train.loc[filtro_GBP_train, 'Total_Amount']*change_GBP"
       ],
-      "execution_count": 176,
+      "execution_count": 237,
       "outputs": []
     },
     {
@@ -440,7 +440,7 @@
       "source": [
         "train['USD_Total_Amount'] = train['USD_Total_Amount'].round(2)"
       ],
-      "execution_count": 177,
+      "execution_count": 238,
       "outputs": []
     },
     {
@@ -455,7 +455,7 @@
         "filtro_JPY_test = test['Total_Amount_Currency'] == 'JPY'\n",
         "filtro_GBP_test = test['Total_Amount_Currency'] == 'GBP'"
       ],
-      "execution_count": 178,
+      "execution_count": 239,
       "outputs": []
     },
     {
@@ -470,7 +470,7 @@
         "test.loc[filtro_JPY_test, 'USD_Total_Amount'] = test.loc[filtro_JPY_test, 'Total_Amount']*change_JPY\n",
         "test.loc[filtro_GBP_test, 'USD_Total_Amount'] = test.loc[filtro_GBP_test, 'Total_Amount']*change_GBP"
       ],
-      "execution_count": 179,
+      "execution_count": 240,
       "outputs": []
     },
     {
@@ -481,7 +481,7 @@
       "source": [
         "test['USD_Total_Amount'] = test['USD_Total_Amount'].round(2)"
       ],
-      "execution_count": 180,
+      "execution_count": 241,
       "outputs": []
     },
     {
@@ -501,7 +501,7 @@
       "source": [
         "train['Target'] = train['Stage'].replace({'Closed Won': 1, 'Closed Lost': 0})"
       ],
-      "execution_count": 181,
+      "execution_count": 242,
       "outputs": []
     },
     {
@@ -511,12 +511,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c293d63d-56e7-4244-ad14-c82eba45e4ec"
+        "outputId": "ca9bdda5-dbea-4e06-a194-c118f769c7cf"
       },
       "source": [
         "train['Target'].astype(int)"
       ],
-      "execution_count": 182,
+      "execution_count": 243,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -539,7 +539,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 182
+          "execution_count": 243
         }
       ]
     },
@@ -551,7 +551,7 @@
       "source": [
         "train.drop(columns=['Stage'], inplace=True)"
       ],
-      "execution_count": 183,
+      "execution_count": 244,
       "outputs": []
     },
     {
@@ -574,7 +574,7 @@
         "\n",
         "test['Region'] = test['Region'].map(mean_encoded_region)"
       ],
-      "execution_count": 184,
+      "execution_count": 245,
       "outputs": []
     },
     {
@@ -584,14 +584,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "15c983e9-8ee9-4f21-b2ee-dced6a2d3701"
+        "outputId": "3e977f48-7a6f-43b3-e14e-5eb558f2b39c"
       },
       "source": [
         "# OJO QUE REGION QUEDÓ DE TIPO CATEGORY\r\n",
         "\r\n",
         "train['Region']"
       ],
-      "execution_count": 185,
+      "execution_count": 246,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -615,7 +615,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 185
+          "execution_count": 246
         }
       ]
     },
@@ -631,13 +631,91 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "U2kCSjr1HMpO"
+        "id": "U2kCSjr1HMpO",
+        "outputId": "a9ee46a9-7a4f-4a2d-b9de-789815556bf5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        }
       },
       "source": [
-        "train.to_csv('data_train.csv', index=False)"
+        "# train.to_csv('https://raw.githubusercontent.com/SantiagoTadini/TP2-Datos/main/Features/data_train.csv', mode='a', index=False)\r\n",
+        "\r\n",
+        "from google.colab import files\r\n",
+        "train.to_csv('data_train_posta.csv')\r\n",
+        "files.download('data_train_posta.csv')"
       ],
-      "execution_count": 188,
-      "outputs": []
+      "execution_count": 247,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ],
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/javascript": [
+              "download(\"download_8b14e484-b667-4f65-b376-1e9ee86c48e1\", \"data_train_posta.csv\", 7158690)"
+            ],
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
     }
   ]
 }
