--- a/Features/Features.ipynb
+++ b/Features/Features.ipynb
@@ -34,7 +34,7 @@
         "import pandas as pd\r\n",
         "import numpy as np"
       ],
-      "execution_count": 222,
+      "execution_count": 275,
       "outputs": []
     },
     {
@@ -63,7 +63,7 @@
         "#     * 'Price' (Muchos nulos; 15982) ----------------> si ahora lo borramos, borrar celda del replace de Price\r\n",
         "#     * 'Currency' (Muchos nulos: 16052)\r\n"
       ],
-      "execution_count": 223,
+      "execution_count": 276,
       "outputs": []
     },
     {
@@ -155,7 +155,7 @@
         "                          'Total_Amount_Currency' : 'category',\n",
         "                          'Total_Taxable_Amount_Currency' : 'category'})"
       ],
-      "execution_count": 224,
+      "execution_count": 277,
       "outputs": []
     },
     {
@@ -165,14 +165,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "F989UwUQddaE",
-        "outputId": "453ab29c-9713-454b-b0f5-2d45ac290f1e"
+        "outputId": "80de0b76-567d-4c36-c099-df03b9bafa3c"
       },
       "source": [
         "# Cantidad de columnas y filas de cada set de datos\r\n",
         "print('Cantidad de columnas de train:', len(train.columns), 'y cantidad de filas de train:', len(train))\r\n",
         "print('Cantidad de columnas de test:', len(test.columns), 'y cantidad de filas de test:', len(test))"
       ],
-      "execution_count": 225,
+      "execution_count": 278,
       "outputs": [
         {
           "output_type": "stream",
@@ -195,7 +195,7 @@
         "\r\n",
         "test.rename(columns={'Source ' : 'Source', 'ASP_(converted)' : 'ASP_(converted_USD)'}, inplace=True)"
       ],
-      "execution_count": 226,
+      "execution_count": 279,
       "outputs": []
     },
     {
@@ -209,7 +209,7 @@
         "\r\n",
         "test['Month'] = pd.to_datetime(test['Month'], format='%Y - %m').dt.month"
       ],
-      "execution_count": 227,
+      "execution_count": 280,
       "outputs": []
     },
     {
@@ -227,7 +227,7 @@
         "test['Price'] = test['Price'].replace('Other', np.NaN)\r\n",
         "test['Price'] = test['Price'].astype('float')"
       ],
-      "execution_count": 228,
+      "execution_count": 281,
       "outputs": []
     },
     {
@@ -252,7 +252,7 @@
         "test['Planned_Delivery_Start_Date'] = pd.to_datetime(test['Planned_Delivery_Start_Date'], format=formato_fecha) # ver fechas filas 0 y 1, comparar el mes con month\r\n",
         "test['Planned_Delivery_End_Date'] = pd.to_datetime(test['Planned_Delivery_End_Date'], format=formato_fecha) # ver fecha fila 0"
       ],
-      "execution_count": 229,
+      "execution_count": 282,
       "outputs": []
     },
     {
@@ -265,7 +265,7 @@
         "\r\n",
         "# test.info()"
       ],
-      "execution_count": 230,
+      "execution_count": 283,
       "outputs": []
     },
     {
@@ -285,7 +285,7 @@
       "source": [
         "# train.head(10)"
       ],
-      "execution_count": 231,
+      "execution_count": 284,
       "outputs": []
     },
     {
@@ -296,7 +296,7 @@
       "source": [
         "# test.head(10)"
       ],
-      "execution_count": 232,
+      "execution_count": 285,
       "outputs": []
     },
     {
@@ -315,13 +315,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nPFXZc362qlR",
-        "outputId": "32c623a1-cf06-4545-e692-76c8819cbfcc"
+        "outputId": "0c8a863b-f28f-4776-bb6c-b147f273924c"
       },
       "source": [
         "# Vemos los posibles valores que puede adoptar 'Stage'\r\n",
         "train['Stage'].value_counts()"
       ],
-      "execution_count": 233,
+      "execution_count": 286,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -338,7 +338,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 233
+          "execution_count": 286
         }
       ]
     },
@@ -349,7 +349,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "n9oydklO66hy",
-        "outputId": "ec004875-a459-4bab-b2e7-fec42872d98f"
+        "outputId": "c6e5058e-82d7-4dcd-d2a3-e29553cb5573"
       },
       "source": [
         "# Tenemos que de 16947 filas en total, solo 64 (0.3776%) NO son Closed Won o Closed Lost, es por\r\n",
@@ -357,7 +357,7 @@
         "train.drop(train[(train['Stage'] != 'Closed Won') & (train['Stage'] != 'Closed Lost')].index, inplace=True)\r\n",
         "train['Stage'].value_counts()"
       ],
-      "execution_count": 234,
+      "execution_count": 287,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -374,7 +374,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 234
+          "execution_count": 287
         }
       ]
     },
@@ -399,7 +399,7 @@
         "change_JPY = 0.0094800 # 1 yen japones = 0,0094800 dolares EEUU\n",
         "change_GBP = 1.2935 # 1 libra esterlina = 1,2935 dolares EEUU"
       ],
-      "execution_count": 235,
+      "execution_count": 288,
       "outputs": []
     },
     {
@@ -414,7 +414,7 @@
         "filtro_JPY_train = train['Total_Amount_Currency'] == 'JPY'\n",
         "filtro_GBP_train = train['Total_Amount_Currency'] == 'GBP'"
       ],
-      "execution_count": 236,
+      "execution_count": 289,
       "outputs": []
     },
     {
@@ -429,7 +429,7 @@
         "train.loc[filtro_JPY_train, 'USD_Total_Amount'] = train.loc[filtro_JPY_train, 'Total_Amount']*change_JPY\n",
         "train.loc[filtro_GBP_train, 'USD_Total_Amount'] = train.loc[filtro_GBP_train, 'Total_Amount']*change_GBP"
       ],
-      "execution_count": 237,
+      "execution_count": 290,
       "outputs": []
     },
     {
@@ -440,7 +440,7 @@
       "source": [
         "train['USD_Total_Amount'] = train['USD_Total_Amount'].round(2)"
       ],
-      "execution_count": 238,
+      "execution_count": 291,
       "outputs": []
     },
     {
@@ -455,7 +455,7 @@
         "filtro_JPY_test = test['Total_Amount_Currency'] == 'JPY'\n",
         "filtro_GBP_test = test['Total_Amount_Currency'] == 'GBP'"
       ],
-      "execution_count": 239,
+      "execution_count": 292,
       "outputs": []
     },
     {
@@ -470,7 +470,7 @@
         "test.loc[filtro_JPY_test, 'USD_Total_Amount'] = test.loc[filtro_JPY_test, 'Total_Amount']*change_JPY\n",
         "test.loc[filtro_GBP_test, 'USD_Total_Amount'] = test.loc[filtro_GBP_test, 'Total_Amount']*change_GBP"
       ],
-      "execution_count": 240,
+      "execution_count": 293,
       "outputs": []
     },
     {
@@ -481,7 +481,7 @@
       "source": [
         "test['USD_Total_Amount'] = test['USD_Total_Amount'].round(2)"
       ],
-      "execution_count": 241,
+      "execution_count": 294,
       "outputs": []
     },
     {
@@ -501,7 +501,7 @@
       "source": [
         "train['Target'] = train['Stage'].replace({'Closed Won': 1, 'Closed Lost': 0})"
       ],
-      "execution_count": 242,
+      "execution_count": 295,
       "outputs": []
     },
     {
@@ -511,12 +511,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ca9bdda5-dbea-4e06-a194-c118f769c7cf"
+        "outputId": "714151ea-869a-4380-d42d-a750477ac108"
       },
       "source": [
         "train['Target'].astype(int)"
       ],
-      "execution_count": 243,
+      "execution_count": 296,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -539,7 +539,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 243
+          "execution_count": 296
         }
       ]
     },
@@ -551,7 +551,7 @@
       "source": [
         "train.drop(columns=['Stage'], inplace=True)"
       ],
-      "execution_count": 244,
+      "execution_count": 297,
       "outputs": []
     },
     {
@@ -574,7 +574,7 @@
         "\n",
         "test['Region'] = test['Region'].map(mean_encoded_region)"
       ],
-      "execution_count": 245,
+      "execution_count": 298,
       "outputs": []
     },
     {
@@ -584,14 +584,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3e977f48-7a6f-43b3-e14e-5eb558f2b39c"
+        "outputId": "2fa2d2fc-75fe-4377-8fbf-0a28caf9e018"
       },
       "source": [
         "# OJO QUE REGION QUEDÓ DE TIPO CATEGORY\r\n",
         "\r\n",
         "train['Region']"
       ],
-      "execution_count": 246,
+      "execution_count": 299,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -615,7 +615,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 246
+          "execution_count": 299
         }
       ]
     },
@@ -632,20 +632,20 @@
       "cell_type": "code",
       "metadata": {
         "id": "U2kCSjr1HMpO",
-        "outputId": "a9ee46a9-7a4f-4a2d-b9de-789815556bf5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
-        }
+        },
+        "outputId": "53d92a39-1007-4653-9444-01fd916a21b4"
       },
       "source": [
         "# train.to_csv('https://raw.githubusercontent.com/SantiagoTadini/TP2-Datos/main/Features/data_train.csv', mode='a', index=False)\r\n",
         "\r\n",
         "from google.colab import files\r\n",
-        "train.to_csv('data_train_posta.csv')\r\n",
-        "files.download('data_train_posta.csv')"
+        "train.to_csv('data_train.csv', index=False)\r\n",
+        "files.download('data_train.csv')"
       ],
-      "execution_count": 247,
+      "execution_count": 301,
       "outputs": [
         {
           "output_type": "display_data",
@@ -705,7 +705,7 @@
           "output_type": "display_data",
           "data": {
             "application/javascript": [
-              "download(\"download_8b14e484-b667-4f65-b376-1e9ee86c48e1\", \"data_train_posta.csv\", 7158690)"
+              "download(\"download_56308cc0-bdeb-4207-8505-d79c974001c6\", \"data_train.csv\", 7068500)"
             ],
             "text/plain": [
               "<IPython.core.display.Javascript object>"
